# douleme

./: .gitignore  README.md  ai-config.json  god-dou-cart-store.js  index.html  pindou-bundle.js  pyproject.toml  ui.css  vercel.json  图像生成.html
docs/: 2026-03-26-image-generation-rebuild.md
python/vision_engine/: __init__.py  run_local.py
python/vision_engine/api/: app.py  schemas.py
python/vision_engine/assets/: mard221.json
python/vision_engine/core/: __init__.py  blockify.py  cleanup.py  feature_anchor.py  iconic_rules.py  palette.py  pipeline.py  preprocess.py  regions.py  render.py  role_map.py  skeleton.py  target_chart_parser.py
python/vision_engine/tests/: test_palette_smoke.py  test_target_chart_parser.py
shared/: god-dou-cart-store.js
图片生成/: app.js  ui.css  图像生成.html
测试/: README.md  parse_target_grid.py  regression_server.py  test-cases.generated.js  批量回归测试.html  生成测试清单.ps1
